--- a/LGBM_GridsearchCV_EarlyStopping.ipynb
+++ b/LGBM_GridsearchCV_EarlyStopping.ipynb
@@ -22,6 +22,18 @@
    },
    "outputs": [],
    "source": [
+    "model_lgb = model_lgb = lgb.LGBMClassifier() ## Can use Regressor, details please refer to the official site.\n",
+    "##http://lightgbm.readthedocs.io/en/latest/python/lightgbm.html#scikit-learn-api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "## A sample demonstrating how to use GridSearchCV with LightGBM (LGBM)\n",
     "\n",
     "# Train model, evaluate and make predictions\n",
